@@ -1816,3 +1816,24 @@ login_saisie varchar(50) NOT NULL DEFAULT '',
 date_saisie DATETIME DEFAULT '1970-01-01 00:00:01', 
 PRIMARY KEY (id), UNIQUE(id_classe, annee)) ENGINE=MyISAM CHARACTER SET utf8 COLLATE utf8_general_ci;
 
+DROP TABLE IF EXISTS a_agregation_demi_journees;
+CREATE TABLE IF NOT EXISTS a_agregation_demi_journees (
+id INTEGER(11) NOT NULL AUTO_INCREMENT,
+eleve_id INTEGER(11) NOT NULL DEFAULT '0',
+elenoet INTEGER(11) NOT NULL DEFAULT '0',
+login VARCHAR(50) NOT NULL DEFAULT '',
+nom VARCHAR(50) NOT NULL DEFAULT '',
+prenom VARCHAR(50) NOT NULL DEFAULT '',
+id_classe INTEGER(11) NOT NULL DEFAULT '0',
+classe VARCHAR(50) NOT NULL DEFAULT '',
+NbAbsences INTEGER(11) NOT NULL DEFAULT '0',
+NbNonJustifiees INTEGER(11) NOT NULL DEFAULT '0',
+NbNonValables INTEGER(11) NOT NULL DEFAULT '0',
+NbRetards INTEGER(11) NOT NULL DEFAULT '0',
+date_debut DATE NOT NULL default '1970-01-01',
+date_fin DATE NOT NULL default '1970-01-01',
+date_extraction DATETIME NOT NULL default '1970-01-01 00:00:00',
+id_extraction INTEGER NOT NULL DEFAULT '0',
+PRIMARY KEY (id)
+) ENGINE=MyISAM CHARACTER SET utf8 COLLATE utf8_general_ci;
+
